--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
 
 <body>
     <div class="wrap"><canvas id="c"></canvas></div>
+
+    <!-- PayPal Coin Shop Modal -->
+    <div id="coinShopModal"
+        style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.88);z-index:99999;overflow-y:auto;-webkit-overflow-scrolling:touch;">
+        <div style="max-width:380px;margin:40px auto;padding:0 16px;">
+            <h2 style="text-align:center;color:#00ffcc;font-family:'Outfit',sans-serif;font-size:24px;margin:0 0 4px;">
+                💎 Coin Shop</h2>
+            <p
+                style="text-align:center;color:rgba(255,255,255,.4);font-family:'Outfit',sans-serif;font-size:13px;margin:0 0 20px;">
+                Get coins to unlock premium skins!</p>
+            <div id="coinPacksContainer"></div>
+            <button id="coinShopClose"
+                style="display:block;width:100%;margin:16px 0 40px;padding:14px;background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.1);border-radius:12px;color:rgba(255,255,255,.5);font-family:'Outfit',sans-serif;font-size:14px;font-weight:600;cursor:pointer;transition:all .2s;">←
+                Back to Shop</button>
+        </div>
+    </div>
     <script src="js/audio.js"></script>
     <script src="js/ads.js"></script>
     <script src="js/shop.js"></script>
@@ -741,10 +757,16 @@
                     }
                 });
 
+                // BUY COINS button
+                const bcW = (W - 48 - 10) / 2, bcH = 42;
+                glassPanel(24, H - 64, bcW, bcH, 12, [0, 255, 204], 0.08);
+                X.font = '600 13px Outfit'; X.textAlign = 'center'; X.fillStyle = '#00ffcc'; X.fillText('💰 BUY COINS', 24 + bcW / 2, H - 37);
+                addBtn('buy_coins', 24, H - 64, bcW, bcH);
+
                 // v4.0 Glassmorphism back button
-                glassPanel(24, H - 64, W - 48, 42, 12);
-                X.font = '600 13px Outfit'; X.textAlign = 'center'; X.fillStyle = 'rgba(255,255,255,.6)'; X.fillText('← BACK', cx, H - 37);
-                addBtn('back', 24, H - 64, W - 48, 42);
+                glassPanel(24 + bcW + 10, H - 64, bcW, bcH, 12);
+                X.font = '600 13px Outfit'; X.textAlign = 'center'; X.fillStyle = 'rgba(255,255,255,.6)'; X.fillText('← BACK', 24 + bcW + 10 + bcW / 2, H - 37);
+                addBtn('back', 24 + bcW + 10, H - 64, bcW, bcH);
             }
 
             // ─── Draw: Leaderboard ────────────────────────
@@ -874,6 +896,7 @@
 
                 if (state === S.SHOP) {
                     if (btn?.id === 'back') { Audio.ui(); state = S.MENU; return }
+                    if (btn?.id === 'buy_coins') { Audio.ui(); openCoinShop(); return }
                     if (btn?.id.startsWith('buy_')) { const id = btn.id.slice(4); const r = SkinShop.buySkin(id); if (r.ok) { Audio.buy(); SkinShop.equipSkin(id) } return }
                     if (btn?.id.startsWith('equip_')) { const id = btn.id.slice(6); SkinShop.equipSkin(id); Audio.ui(); return }
                     return;
@@ -959,6 +982,63 @@
 
             // Shop scroll
             C.addEventListener('wheel', e => { if (state === S.SHOP) { shopTarget = Math.max(0, shopTarget + e.deltaY * .5) } }, { passive: true });
+
+            // ─── Coin Shop (PayPal Modal) ────────────────
+            function openCoinShop() {
+                const modal = document.getElementById('coinShopModal');
+                const container = document.getElementById('coinPacksContainer');
+                if (!modal || !container) return;
+
+                container.innerHTML = '';
+                const packs = PayPalShop.getPacks();
+
+                packs.forEach(pack => {
+                    const card = document.createElement('div');
+                    card.style.cssText = 'background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;margin-bottom:12px;';
+
+                    const bonusBadge = pack.bonus ? `<span style="background:rgba(0,255,204,.15);color:#00ffcc;font-size:11px;padding:2px 8px;border-radius:20px;margin-left:8px;">${pack.bonus}</span>` : '';
+
+                    card.innerHTML = `
+                        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;">
+                            <div>
+                                <span style="font-family:'Outfit',sans-serif;font-size:16px;font-weight:600;color:white;">💎 ${pack.label}</span>${bonusBadge}
+                            </div>
+                            <span style="font-family:'Outfit',sans-serif;font-size:18px;font-weight:700;color:#ffd36a;">$${pack.price}</span>
+                        </div>
+                        <div id="pp-btn-${pack.id}" style="min-height:45px;"></div>
+                    `;
+                    container.appendChild(card);
+                });
+
+                modal.style.display = 'block';
+
+                // Load SDK and render buttons
+                PayPalShop.loadSDK().then(() => {
+                    packs.forEach(pack => {
+                        PayPalShop.renderButtons(`pp-btn-${pack.id}`, pack.id,
+                            (p, details) => {
+                                console.log(`[CoinShop] ✅ Purchased ${p.coins} coins! Order: ${details.id}`);
+                                closeCoinShop();
+                                // Visual feedback
+                                fb = `+${p.coins} COINS!`; fbC = '#ffd36a'; fbT = 2.5;
+                            },
+                            (err) => {
+                                console.error('[CoinShop] Payment failed:', err);
+                            }
+                        );
+                    });
+                }).catch(err => {
+                    console.error('[CoinShop] SDK load failed:', err);
+                    container.innerHTML = '<p style="text-align:center;color:#ff5d7a;font-family:Outfit,sans-serif;">Failed to load payment system. Please try again.</p>';
+                });
+            }
+
+            function closeCoinShop() {
+                const modal = document.getElementById('coinShopModal');
+                if (modal) modal.style.display = 'none';
+            }
+
+            document.getElementById('coinShopClose')?.addEventListener('click', closeCoinShop);
 
             // ─── Loop ─────────────────────────────────────
             let last = performance.now();
