🎨 Apply ARK brand logo + PayPal Coin Shop integration

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="description" content="ARK Pulse Drop — Premium rhythm timing game" />
     <meta name="theme-color" content="#07080c" />
     <title>ARK — Pulse Drop</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&display=swap"
         rel="stylesheet" />
     <style>
